--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,25 +1,27 @@
-<ul class="breadcrumb">
-    <li><a href="/" title="Accueil">Accueil</a></li>
-    <li class="active">Détail</li>
-  </ul>
+<div class="container ">
+    <ul class="breadcrumb">
+        <li><a href="/" title="Accueil">Accueil</a></li>
+        <li class="active">Détail</li>
+    </ul>
 
-<h1 class="text-center">Détail</h1>
+    <div class="row">
+        <div class="col title text-light rounded-3 "><h2>{{ country }}</h2></div>
+    </div>
+    <div class="row">
+        <div class="col subtitle rounded-3">Number of entries<br/> {{ participationsCount }}</div>
+        <div class="col subtitle rounded-3">Total number medals <br/> {{ medalsCount }}</div>
+        <div class="col subtitle rounded-3">Total number of athletes <br/> {{ athleteCount }}</div>
+    </div>
 
-<div>
-    Total de participations : {{ participationsCount }} <br />
-    Total de médails : {{ medalsCount }} <br />
-    Nombre total de participants  : {{ athleteCount }} <br />
-
-</div>
 <div>
     <table class="table table-dark">
         <thead>
             <tr>
-                    <th scope="col">Pays</th>
-                    <th scope="col">année</th>
-                    <th scope="col">city</th>
-                    <th scope="col">Nombre d'athlètes </th>
-                    <th scope="col">Nombre de médails</th>
+                <th scope="col">Pays</th>
+                <th scope="col">année</th>
+                <th scope="col">city</th>
+                <th scope="col">Nombre d'athlètes </th>
+                <th scope="col">Nombre de médails</th>
             </tr>
         </thead>
         <tbody>
@@ -34,7 +36,11 @@
     </table>
 </div>
 <div>
-    <div *ngIf="ev" > 
-        <app-bar-chart [labels]='aOlympicServiceLabels' [data]='aOlympicServiceData' (parentFun)='parentFun($event)'></app-bar-chart>
+    <!-- display element when ev (status) is true -->
+    <div class="chart">
+        <div *ngIf="ev" > 
+            <app-bar-chart [labels]='aOlympicServiceLabels' [data]='aOlympicServiceData' ></app-bar-chart>
+        </div>
     </div>
+</div>
 </div>
