--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,46 +1,26 @@
 <div class="container ">
     <ul class="breadcrumb">
-        <li><a href="/" title="Accueil">Accueil</a></li>
-        <li class="active">Détail</li>
+        <li><a href="/" title="home">Home</a></li>
+        <li class="active">{{ country }}</li>
     </ul>
 
     <div class="row">
-        <div class="col title text-light rounded-3 "><h2>{{ country }}</h2></div>
-    </div>
-    <div class="row">
-        <div class="col subtitle rounded-3">Number of entries<br/> {{ participationsCount }}</div>
-        <div class="col subtitle rounded-3">Total number medals <br/> {{ medalsCount }}</div>
-        <div class="col subtitle rounded-3">Total number of athletes <br/> {{ athleteCount }}</div>
-    </div>
-
-<div>
-    <table class="table table-dark">
-        <thead>
-            <tr>
-                <th scope="col">Pays</th>
-                <th scope="col">année</th>
-                <th scope="col">city</th>
-                <th scope="col">Nombre d'athlètes </th>
-                <th scope="col">Nombre de médails</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let participation of participations" >
-                <th scope="row">{{ country }}</th>
-                <td>{{participation[0]}}</td>
-                <td>{{participation[1]}}</td>
-                <td>{{participation[2]}}</td>
-                <td>{{participation[3]}}</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-<div>
-    <!-- display element when ev (status) is true -->
-    <div class="chart">
-        <div *ngIf="ev" > 
-            <app-bar-chart [labels]='aOlympicServiceLabels' [data]='aOlympicServiceData' ></app-bar-chart>
+        <div class="col title text-light rounded-3 ">
+            <h2>{{ country }}</h2>
         </div>
     </div>
-</div>
+    <div class="row">
+        <div class="col subtitle rounded-3">Number of entries<br /> {{ participationsCount }}</div>
+        <div class="col subtitle rounded-3">Total number medals <br /> {{ medalsCount }}</div>
+        <div class="col subtitle rounded-3">Total number of athletes <br /> {{ athleteCount }}</div>
+    </div>
+
+    <div>
+        <!-- display element when ev (status) is true -->
+        <div class="chart">
+            <div *ngIf="ev">
+                <app-line-chart [labels]='aOlympicServiceLabels' [data]='aOlympicServiceData'></app-line-chart>
+            </div>
+        </div>
+    </div>
 </div>
